k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cadence
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: beta.cadence.app
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cadence
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cadence-client
                port:
                  number: 80
  tls:
    - hosts:
        - beta.cadence.app
